# organize-my-beats

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/organize_my_beats/: __init__.py  __main__.py  advanced_gui.py  cli.py  gui.py  organize_my_beats.py  organizer.py  player_view.py  report.py
tests/: __init__.py  test_organize_my_beats.py
